Creating builders for all of the classes, updating some of the tests to use them. Removed all validation so removed the tests. Updating ladder-diagram

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
 <channel-selector></channel-selector>
 <transformer-selector></transformer-selector>
 <transformer-property-selector></transformer-property-selector>
+<ladder-diagram></ladder-diagram>
 
 
