Added Transformer Properties Selector Component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
 
 <channel-selector></channel-selector>
 <transformer-selector></transformer-selector>
+<transformer-property-selector></transformer-property-selector>
 
 
