Amended TransformerProperty Component to use an @Input() property to render the Transformer Property data

--- a/src/app/widgets/transformer-property-selector/transformer-property-selector.component.html
+++ b/src/app/widgets/transformer-property-selector/transformer-property-selector.component.html
@@ -2,7 +2,7 @@
 <form>
 
   <!--suppress HtmlUnknownAttribute -->
-  <div *ngFor="let transformerProperty of transformerProperties" class="transformer-property">
+  <div *ngFor="let transformerProperty of transformer?.properties" class="transformer-property">
 
     <div class="transformer-property-group">
 
