--- a/src/app/widgets/transformer-property-selector/transformer-property-selector.component.html
+++ b/src/app/widgets/transformer-property-selector/transformer-property-selector.component.html
@@ -2,43 +2,43 @@
 <form>
 
   <!--suppress HtmlUnknownAttribute -->
-  <div *ngFor="let transformerProperty of transformer?.properties" class="transformer-property">
+  <div *ngFor="let transformerProperty of transformerProperties | async" class="transformer-property">
 
     <div class="transformer-property-group">
 
-      <div [ngSwitch]="transformerProperty.type">
+      <div [ngSwitch]="transformerProperty.type | async">
 
         <ng-template [ngSwitchCase]="'string'">
-          <label class="transformer-property-name">{{transformerProperty.name}}
+          <label class="transformer-property-name">{{transformerProperty.name | async}}
             <select class="transformer-property-value">
               <option>
-                {{transformerProperty.value}}
+                {{transformerProperty.value | async}}
               </option>
             </select>
           </label>
         </ng-template>
 
         <ng-template [ngSwitchCase]="'decimal'">
-          <label class="transformer-property-name">{{transformerProperty.name}}
-            <input class="transformer-property-value" type="number" value="{{transformerProperty.value}}"/>
+          <label class="transformer-property-name">{{transformerProperty.name | async}}
+            <input class="transformer-property-value" type="number" value="{{transformerProperty.value | async}}"/>
           </label>
         </ng-template>
 
         <ng-template [ngSwitchCase]="'integer'">
-          <label class="transformer-property-name">{{transformerProperty.name}}
-            <input class="transformer-property-value" type="number" value="{{transformerProperty.value}}"/>
+          <label class="transformer-property-name">{{transformerProperty.name | async}}
+            <input class="transformer-property-value" type="number" value="{{transformerProperty.value | async}}"/>
           </label>
         </ng-template>
 
         <ng-template [ngSwitchCase]="'float'">
-          <label class="transformer-property-name">{{transformerProperty.name}}
-            <input class="transformer-property-value" type="number" value="{{transformerProperty.value}}"/>
+          <label class="transformer-property-name">{{transformerProperty.name | async}}
+            <input class="transformer-property-value" type="number" value="{{transformerProperty.value | async}}"/>
           </label>
         </ng-template>
 
         <ng-template [ngSwitchCase]="'boolean'">
-          <label class="transformer-property-name">{{transformerProperty.name}}
-            <input class="transformer-property-value" type="checkbox" [checked]="transformerProperty.value">
+          <label class="transformer-property-name">{{transformerProperty.name | async}}
+            <input class="transformer-property-value" type="checkbox" [checked]="transformerProperty.value | async">
           </label>
         </ng-template>
 
