--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,53 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container-fluid">
 
-<channel-selector></channel-selector>
-<transformer-selector></transformer-selector>
-<transformer-property-selector></transformer-property-selector>
-<ladder-diagram></ladder-diagram>
+  <div class="row">
+    <div class="col-12" style="background-color: #e3f2fd;">
+      <nav-bar></nav-bar>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-2" >
+      <div class="row">
+        <div class="col-md-12" style="background-color: #e3f2fd;">
+          Channel Selector
+          <channel-selector></channel-selector>
+        </div>
+      </div>
 
+      <div class="row">
+        <div class="col-md-12" style="background-color: lightpink; width: 200px; height: 500px; overflow-y: scroll;">
+          Transformers
+          <transformer-selector></transformer-selector>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+        </div>
+      </div>
 
+    </div>
+    <div class="col-md-8" style="background-color: lightcyan">
+      Transformer Ladder
+      <ladder-diagram></ladder-diagram>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+    </div>
+
+    <div class="col-2" style="background-color: lightskyblue">
+      Transformer Properties
+      <transformer-property-selector></transformer-property-selector>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+    </div>
+  </div>
+</div>
