Adding drag overlay

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-
+  <drag-overlay></drag-overlay>
   <div class="row">
     <div class="col-12" style="background-color: #e3f2fd;">
       <nav-bar></nav-bar>
