--- a/src/app/widgets/transformer-property-selector/transformer-property-selector.component.html
+++ b/src/app/widgets/transformer-property-selector/transformer-property-selector.component.html
@@ -1,10 +1,10 @@
 <div *ngFor="let transformerProperty of transformerProperties | async" class="transformer-property">
   <div class="transformer-property-group">
 
-    <div [ngSwitch]="transformerProperty.type | async">
+    <div [ngSwitch]="transformerProperty.type">
 
       <ng-template [ngSwitchCase]="'string'">
-        <label class="transformer-property-name">{{transformerProperty.name | async}}
+        <label class="transformer-property-name">{{transformerProperty.name}}
           <input class="transformer-property-value form-control" type="text" [ngModel]="transformerProperty.value | async" (ngModelChange)="transformerProperty.value.next($event)"/>
           <!--select class="transformer-property-value">
             <option>
@@ -15,25 +15,25 @@
       </ng-template>
 
       <ng-template [ngSwitchCase]="'decimal'">
-        <label class="transformer-property-name">{{transformerProperty.name | async}}
+        <label class="transformer-property-name">{{transformerProperty.name}}
           <input class="transformer-property-value form-control" type="number" [ngModel]="transformerProperty.value | async" (ngModelChange)="transformerProperty.value.next($event)"/>
         </label>
       </ng-template>
 
       <ng-template [ngSwitchCase]="'integer'">
-        <label class="transformer-property-name">{{transformerProperty.name | async}}
+        <label class="transformer-property-name">{{transformerProperty.name}}
           <input class="transformer-property-value form-control" type="number" [ngModel]="transformerProperty.value | async" (ngModelChange)="transformerProperty.value.next($event)"/>
         </label>
       </ng-template>
 
       <ng-template [ngSwitchCase]="'float'">
-        <label class="transformer-property-name">{{transformerProperty.name | async}}
+        <label class="transformer-property-name">{{transformerProperty.name}}
           <input class="transformer-property-value form-control" type="number" [ngModel]="transformerProperty.value | async" (ngModelChange)="transformerProperty.value.next($event)"/>
         </label>
       </ng-template>
 
       <ng-template [ngSwitchCase]="'boolean'">
-        <label class="transformer-property-name">{{transformerProperty.name | async}}
+        <label class="transformer-property-name">{{transformerProperty.name}}
           <input class="transformer-property-value form-control" type="checkbox" [ngModel]="transformerProperty.value | async" (ngModelChange)="transformerProperty.value.next($event)">
         </label>
       </ng-template>
