Adding metadata loading and updating the navbar

--- a/src/app/widgets/nav-bar/nav-bar.component.css
+++ b/src/app/widgets/nav-bar/nav-bar.component.css
@@ -1,4 +1,11 @@
-li {
-  padding-top:6px;
-  padding-right: 8px;
+.dropdown-item.selected {
+  background-color: #e7e7e9;
+}
+
+.dropdown-item.selected:hover {
+  background-color: #dcdcde;
+}
+
+.ellipsis {
+  text-overflow: ellipsis; overflow: hidden;
 }
