Added Save Configuration dialog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,19 +16,19 @@
 
       <div class="row">
         <div class="col p-0" style="background-color: lightpink; width: 200px; height: 500px; overflow-y: scroll;">
-          <h6>Transformers</h6>
+          <h6>Analytics</h6>
           <transformer-selector></transformer-selector>
         </div>
       </div>
 
     </div>
     <div class="col p-0 d-flex flex-column" style="background-color: lightcyan;">
-      <h6>Transformer Ladder</h6>
+      <h6>Analytics Ladder</h6>
       <ladder-diagram class="inline-flex h-100 w-100" style="overflow: auto"></ladder-diagram>
     </div>
 
     <div class="col-2 p-0" style="background-color: lightskyblue">
-      <h6>Transformer Properties</h6>
+      <h6>Analytic Properties</h6>
       <transformer-property-selector></transformer-property-selector>
     </div>
   </div>
