--- a/src/app/widgets/nav-bar/nav-bar.component.html
+++ b/src/app/widgets/nav-bar/nav-bar.component.html
@@ -12,7 +12,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0)" (click)="saveConfig()">Save Configuration</a>
+          <a class="nav-link" href="javascript:void(0)" (click)="openSaveConfigurationDialog()">Save Configuration</a>
       </li>
       <li class="nav-item examples" ngbDropdown>
         <a class="nav-link" href="javascript:void(0)" ngbDropdownToggle>Sample Configurations</a>
