--- a/src/app/widgets/transformer-selector/transformer-selector.component.scss
+++ b/src/app/widgets/transformer-selector/transformer-selector.component.scss
@@ -1,3 +1,5 @@
+@import '../../../_theme.scss';
+
 * >>> .unselectable {
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
@@ -5,4 +7,8 @@
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none;  /* Non-prefixed version, currently supported by Chrome and Opera */
+}
+
+h4 {
+  color: $gray;
 }
