Added Information panel below the ladder diagram

--- a/src/_theme.scss
+++ b/src/_theme.scss
@@ -28,3 +28,9 @@ $brand-info:                $teal !default;
 $brand-warning:             $orange !default;
 $brand-danger:              $red !default;
 $brand-inverse:             #333;//$gray-dark !default;
+
+$xs: 0;
+$sm: 576px;
+$md: 768px;
+$lg: 992px;
+$xl: 1200px;
