--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,10 @@
   border-right: 1px solid $gray-lighter;
 }
 
+.information-panel {
+  border-top: 1px solid $gray-lighter;
+}
+
 transformer-property-selector {
   background-color: $gray-lightest;
   border-left: 1px solid $gray-lighter;
