--- a/src/app/widgets/nav-bar/nav-bar.component.scss
+++ b/src/app/widgets/nav-bar/nav-bar.component.scss
@@ -13,7 +13,7 @@
 }
 
 .navbar {
-  box-shadow: 0 2px 2px rgba(0,0,0,0.5);
+  box-shadow: 0 2px 2px rgba($black,0.5);
   z-index: 9;
   .nav-item .nav-link {
     &:hover, &:focus {
