--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,8 @@
 
 .information-panel {
   border-top: 1px solid $gray-lighter;
+  background-color: $white;
+  z-index:999;
 }
 
 transformer-property-selector {
