--- a/src/app/widgets/dragoverlay/drag-overlay.component.html
+++ b/src/app/widgets/dragoverlay/drag-overlay.component.html
@@ -1,1 +1,13 @@
-<svg></svg>
+<svg>
+  <defs>
+    <filter id="dropshadow">
+      <feGaussianBlur in="SourceAlpha" stdDeviation="3"/>
+      <feFuncA type="linear" slope="0.3"/>
+      <feOffset dx="10" dy="10"/>
+      <feComponentTransfer>
+        <feFuncA type="linear" slope="0.3"/>
+      </feComponentTransfer>
+      <feBlend mode="normal" in="SourceGraphic" />
+    </filter>
+  </defs>
+</svg>
