--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,11 @@
   <drag-overlay></drag-overlay>
   <nav-bar></nav-bar>
   <div class="w-100 h-100 d-flex">
-    <div class="col-2 d-flex flex-column p-0 left-panel" >
-      <channel-selector class="h-50 p-2 scroll"></channel-selector>
-      <transformer-selector class="h-100 p-2 scroll"></transformer-selector>
+    <div class="left-panel h-100"> <!-- added a div to fix chrome bug where fixed width is sometimes ignored if d-flex is set on element -->
+      <div class="d-flex flex-column p-0 h-100">
+        <channel-selector class="h-50 p-2 scroll"></channel-selector>
+        <transformer-selector class="h-100 p-2 scroll"></transformer-selector>
+      </div>
     </div>
     <div class="col p-0 h-100">
       <div class="scroll" [style.height]="ladderDiagramHeightPercentString">
