Added drop shadow to channels in channel selector

--- a/src/app/widgets/channel-selector/channel-selector.component.scss
+++ b/src/app/widgets/channel-selector/channel-selector.component.scss
@@ -1,6 +1,26 @@
 @import '../../../_theme.scss';
 
-$transformer-color: saturate($brand-primary, 20%);
+$channel-color: saturate($brand-primary, 20%);
+
+* /deep/ {
+  .channel {
+    fill: $channel-color;
+    filter: url('#dropshadow');
+
+    .channel-circle {
+      stroke: $black;
+      stroke-width: 2;
+
+      &.placeholder {
+        fill: $white;
+      }
+    }
+
+    text {
+      fill: black;
+    }
+  }
+}
 
 h4 {
   color: $gray;
