Now prevent empty channels from being created Can now create a new channel when the Enter key is pressed

--- a/src/app/widgets/channel-selector/channel-selector.component.html
+++ b/src/app/widgets/channel-selector/channel-selector.component.html
@@ -9,6 +9,6 @@
     </g>
   </svg>
   <div class="d-inline-block">
-    <input class="form-control" type="text" [(ngModel)]="addChannelName" placeholder="Enter a channel name..."/>
+    <input class="form-control" type="text" [(ngModel)]="addChannelName" (keyup.enter)="addChannel(addChannelName)" placeholder="Enter a channel name..."/>
   </div>
 </div>
